--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environments
+/src/environments/environment.ts
+/src/environments/environment.prod.ts
